projet_gl/src/test/deca/syntax/valid/unaryExpr/not.deca
// Description:
//    test parser for not.
//
// Resultats:
//    `> [22, 0] Program
//       +> ListDeclClass [List with 0 elements]
//       `> [22, 0] Main
//          +> ListDeclVar [List with 1 elements]
//          |  []> [23, 12] DeclVar
//          |      +> [23, 12] Identifier (boolean)
//          |      +> [23, 12] Identifier (a)
//          |      `> [23, 16] Initialization
//          |         `> [23, 16] BooleanLiteral (true)
//          `> ListInst [List with 1 elements]
//             []> [24, 4] Not
//                 `> [24, 5] Identifier (a)  
//
// Historique:
//    cree le 12/01/2024

{
    boolean a = true;
    !a;
}